Update documentation to include new sections for Web Asks and Slack Agent, enhancing clarity on features and usage. Revise existing content for consistency and accuracy, and improve navigation by adding context for Memory and Profiles. Adjust sidebar links and descriptions to reflect recent changes in functionality.

--- a/.mintignore
+++ b/.mintignore
@@ -5,3 +5,8 @@
 # Draft content
 drafts/
 *.draft.mdx
+
+# Project instructions (not docs pages)
+AGENTS.md
+
+# Mintlify template docs (not in nav)
